<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="Preferencias">

        <PreferenceScreen
            android:key="screen_preference"
            android:summary=""
            android:title="Configuracion del perfíl"
            >

            <!-- You can place more preferences here that will be shown on the next screen. -->

            <PreferenceCategory android:title="Profile">

                <EditTextPreference
                    android:key="name"
                    android:title="@string/name"
                    android:summary="@string/nameSettingsDescription"
                    android:dialogTitle="@string/name"
                    android:text=""/>

                <EditTextPreference
                    android:key="user"
                    android:title="@string/user"
                    android:summary="@string/userSettingsDescription"
                    android:dialogTitle="@string/user"
                    android:text=""/>

                <EditTextPreference
                    android:key="password"
                    android:title="@string/password"
                    android:summary="@string/passwordSettingsDescription"
                    android:dialogTitle="@string/password"
                    android:text=""/>

                <EditTextPreference
                    android:key="mail"
                    android:title="@string/email"
                    android:summary="@string/emailSettingsDescription"
                    android:dialogTitle="@string/email"
                    android:text=""/>


                <Preference
                    android:key="photo"
                    android:layout="@layout/profile_preference_photo"
                    android:order="4"
                    android:summary="@string/photoSettingsDescription"
                    android:title="Foto">


                </Preference>



            </PreferenceCategory>

        </PreferenceScreen>

    </PreferenceCategory>




</PreferenceScreen>