<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".View.Login.LoginFragment"
    android:background="@color/colorPrimaryDark">


    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:paddingBottom="40dp"
        android:src="@mipmap/ic_launcher_round" />


    <android.support.v7.widget.CardView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="4dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            tools:ignore="RtlSymmetry">

            <android.support.design.widget.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <EditText
                    android:id="@+id/user"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/user"
                    android:imeOptions="actionNext"
                    android:inputType="textNoSuggestions"
                    android:layout_marginStart="26dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="10dp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:layout_marginStart="26dp"
                    android:layout_marginEnd="16dp"/>
            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/session"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:checked="true"
                android:gravity="center"
                android:text="@string/keep_session" />

            <Button
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_shape"
                android:layout_marginTop="8dp"
                android:onClick="onClick"
                android:text="@string/log_in"
                android:layout_gravity="end"
                android:textColor="@color/cardview_light_background" />



        </LinearLayout>


    </android.support.v7.widget.CardView>


        <Button
            android:id="@+id/logup_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_shape"
            android:layout_marginTop="30dp"
            android:onClick="onClick"
            android:text="@string/log_up_at_user"
            android:textColor="@color/cardview_light_background" />

        <Button
            android:id="@+id/logup_tutor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_shape"
            android:onClick="onClick"
            android:text="@string/log_up_at_inst"
            android:textColor="@color/cardview_light_background" />

</LinearLayout>
